--- a/test/src/arcelik-test-scss/Components/Popup.scss
+++ b/test/src/arcelik-test-scss/Components/Popup.scss
@@ -246,6 +246,13 @@
     }
 }
 
+//emos kampanya popup
+.popup_prom {
+    .minPpBdy {
+        overflow: hidden;
+    }
+}
+
 //default
 .ems-popup {
     @extend %popup;
