--- a/test/src/arcelik-test-scss/Components/Header.scss
+++ b/test/src/arcelik-test-scss/Components/Header.scss
@@ -249,8 +249,8 @@
                     }
                 }
             }
-            /* HEADER MENU TYPE 2 [EMS0004294831915]*/
-            .type-1 {
+            /* HEADER MENU TYPE 2 AND TYPE 3  [EMS0004294831915]*/
+            .type-1, .type-2 {
                 display: none;
             }
             .type-2{
@@ -274,6 +274,7 @@
                                 justify-content: flex-start;
                                 flex-wrap: wrap;
                                 position: relative;
+                                padding-bottom: 0 !important;
                                 > li{
                                     width: 33.3%;
                                     margin-bottom: 5px;
@@ -335,12 +336,14 @@
                         }
                         &.cat-1{
                             .op-menu{
-                                height: 440px !important;
+                                //height: 440px !important;
+                                height: 360px !important;
                             }
                         }
                         &.cat-2{
                             .op-menu{
-                                height: 380px !important;
+                                //height: 380px !important;
+                                height: 290px !important;
                             }
                         }
                         &.cat-3{
@@ -355,10 +358,127 @@
                         }
                         &.cat-5{
                             .op-menu{
-                                height: 625px !important;
+                                //height: 625px !important;
+                                height: 540px !important;
                             }
                         }
                     }
+                }
+            }
+            .type-3{
+                .lvl1{
+                    >li{
+                        &.selected{
+                            .op-menu{ display: flex !important; }
+                            .ems-sub{ width: 75%; }
+                        }
+                        ul{ padding-bottom: 0 !important; }
+                        .op-menu{
+                            justify-content: space-around;
+                            padding-bottom: 115px;
+                            > ul{
+                                width: 80%;
+                                margin-top: 20px;
+                                display: flex;
+                                flex-direction: column;
+                                align-content: flex-start;
+                                justify-content: flex-start;
+                                flex-wrap: wrap;
+                                position: relative;
+                                padding-bottom: 0 !important;
+                                > li{
+                                    width: 33.3%;
+                                    margin-bottom: 5px;
+                                    margin-top: 5px;
+                                    padding-left: 15px;
+                                    > a{
+                                        font-weight: 700;
+                                    }
+                                    a{
+                                        border-bottom: 1px solid transparent;
+                                        transition: border .2s;
+                                        &:hover{ border-bottom: 1px solid #302c2c; }
+                                    }
+                                    ul{
+                                        padding-bottom: 0 !important;
+                                    }
+                                    &.cat-link{
+                                        bottom:-80px !important;
+                                        width: 100%;
+                                        display: inline-block;
+                                        a{
+                                        display:block;
+                                        padding: 15px 0;
+                                        text-align: center;
+                                        border: 1px solid #ebebeb;
+                                        }
+                                    }
+                                }
+                                &:before{
+                                    content: " ";
+                                    display: inline-block;
+                                    width: 1px;
+                                    height: 100%;
+                                    position: absolute;
+                                    z-index: 1;
+                                    top: 0;
+                                    left: 33.3%;
+                                    background: #ebebeb;
+                                }
+                                &:after{
+                                    content: " ";
+                                    display: inline-block;
+                                    width: 1px;
+                                    height: 100%;
+                                    position: absolute;
+                                    z-index: 1;
+                                    top: 0;
+                                    left: 66.6%;
+                                    background: #ebebeb;
+                                }
+                                .cat-link{
+                                    display: none;
+                                }
+
+                            }
+                            .cat-obj-holder{
+                                width: 320px;
+                                margin-left: 20px;
+                                position: initial;
+                                &:empty{
+                                    display: none;
+                                }
+                            }
+                        }
+                        &.cat-1{
+                            .op-menu{
+                                height: 360px !important;
+                            }
+                        }
+                        &.cat-2{
+                            .op-menu{
+                                height: 290px !important;
+                            }
+                        }
+                        &.cat-3{
+                            .op-menu{
+                                height: 460px !important;
+                            }
+                        }
+                        &.cat-4{
+                            .op-menu{
+                                height: 350px !important;
+                            }
+                        }
+                        &.cat-5{
+                            .op-menu{
+                                height: 540px !important;
+                            }
+                        }
+                    }
+                }
+                @media screen and (max-width: $laptop-m){
+                  & > ul.lvl1 > li.selected .ems-sub{ width: 100%; }
                 }
             }
         }
