--- a/test/src/arcelik-test-scss/Components/Header.scss
+++ b/test/src/arcelik-test-scss/Components/Header.scss
@@ -250,9 +250,7 @@
                 }
             }
             /* HEADER MENU TYPE 2 AND TYPE 3  [EMS0004294831915]*/
-            .type-1, .type-2 {
-                display: none;
-            }
+            // .type-2, .type-3 { display: none; }
             .type-2{
                 .lvl1{
                     >li{
