--- a/test/src/arcelik-test-scss/Base/Variables.scss
+++ b/test/src/arcelik-test-scss/Base/Variables.scss
@@ -7,8 +7,9 @@ $baseHref: '//epm.test.arcelik.com';
 
 // Typography
 $fontDefault: "arial";
-$fontSite: "Gotham Rounded";
+$fontSite: "Heron";
 $fontSite2: "Gotham";
+$fontSite3: "Gotham Rounded";
 $fontSizeDefault: 12px;
 
 // Colors
