--- a/test/src/arcelik-test-scss/Components/Cart.scss
+++ b/test/src/arcelik-test-scss/Components/Cart.scss
@@ -598,7 +598,7 @@
             .form-label {
                 display: block;
                 text-align: left;
-                font-family: "Gotham Rounded";
+                font-family: $fontSite;
                 font-size: 13px;
                 color: #333;
                 font-weight: normal;
