--- a/test/src/arcelik-test-scss/Components/Footer.scss
+++ b/test/src/arcelik-test-scss/Components/Footer.scss
@@ -63,7 +63,7 @@
         .contact {
             display: table;
             margin-top: 60px;
-            font-family: gotham;
+            font-family: $fontSite;
             color: #fff;
             span {
                 display: block;
