--- a/test/src/arcelik-test-scss/Components/Form.scss
+++ b/test/src/arcelik-test-scss/Components/Form.scss
@@ -126,7 +126,7 @@ textarea {
     }
     [id$="lbfUYE_KONTROLKODU"] {
         display: block;
-        font-family: "Gotham Rounded";
+        font-family: $fontSite;
         font-size: 13px;
         color: #666;
         line-height: 1.4;
