--- a/test/src/arcelik-test-scss/Components/Pages.scss
+++ b/test/src/arcelik-test-scss/Components/Pages.scss
@@ -123,7 +123,7 @@ a.type1 {
 a.contact724 {
     display: table;
     margin-top: 60px;
-    font-family: gotham;
+    font-family: $fontSite;
     text-decoration: none;
     span {
         display: block;
@@ -549,7 +549,7 @@ a.contact724 {
                 display: inline-block;
                 padding: 10px 6px;
                 margin: 0 6px;
-                font-family: "Gotham Rounded";
+                font-family: $fontSite;
                 font-size: 15px;
                 color: #cecece;
                 font-weight: 700;
