--- a/test/src/arcelik-test-scss/style.css
+++ b/test/src/arcelik-test-scss/style.css
@@ -5069,8 +5069,8 @@ body .ui-datepicker table {
   .site-header-inner a.btn-signin {
     padding-left: 4px; }
   .site-header-inner .mod-lang {
-    display: none;
     position: relative;
+    display: inline-block;
     vertical-align: top;
     margin-right: 15px; }
     .site-header-inner .mod-lang .mod-lang-body .sub a {
@@ -5625,7 +5625,11 @@ body .ui-datepicker table {
       width: 100%;
       z-index: 997; }
       .site-header-inner .mod-lang {
-        display: none; }
+        display: none;
+        margin-right: 25px; }
+        .site-header-inner .mod-lang .mod-lang-body .sub a {
+          padding-top: 20px;
+          padding-bottom: 20px; }
       .site-header-inner .row-holder-1 {
         height: 52px;
         position: relative;
@@ -8473,16 +8477,24 @@ body .ui-datepicker table {
         .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description ul.features li .text {
           color: #999; }
         .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi {
-          position: absolute;
-          right: 5px;
-          top: 5px;
-          background: #107600;
-          font-size: 13px;
+          position: relative;
+          display: table;
+          background: #00A853;
+          font-size: 11px;
           color: #fff;
           letter-spacing: 1px;
-          padding: 3px 5px; }
+          line-height: 15px;
+          padding: 0 4px;
+          margin-bottom: 5px; }
+          .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-description .enerji-sinifi:after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: -15px;
+            border-width: 7.5px;
+            border-style: solid;
+            border-color: transparent transparent transparent #00A853; }
       .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .urunListe_ParoAciklama {
-        /*margin-top: 20px;*/
         margin-top: 10px;
         height: 22px; }
       .ems-prd-list > .ems-inline .ems-prd .ems-prd-inner .ems-prd-price {
@@ -16336,3 +16348,5 @@ html.ms-ready [id$="divCaptcha"] #imgCaptcha {
   left: 2px;
   top: 25px;
   height: 36px; }
+
+/*# sourceMappingURL=style.css.map */
